--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <style>
     	body{
-		background color:rgb(4, 138, 86);
+		background-color:rgb(4, 138, 86);
 		}
 		a{
-		color:(255, 255, 255);
+		color:rgb(255, 255, 255);
 		}
     </style>
     <body>
