--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
         <title>Bored Button Thing</title>
     </head>
     <style>
-    	body{
-		background-color:rgb(4, 138, 86);
-		}
-		a{
-		color:rgb(255, 255, 255);
-		}
+	    body{
+	    	background-color: rgb(4, 138, 86);
+	    }
+	    a{
+	    color: rgb(255, 255, 255);
+	    }
+	    div{
+	    color:rgb(255, 255, 255);
+	    }
     </style>
     <body>
         
-        <h1><a href="https://sarahobaird.github.io/test/">Click Here to go to a website!!!</a></h1>
-     
+        <div class="link">
+	<h1><a href="https://sarahobaird.github.io/test/">Click Here to go to a website!!!</a></h1>
+	</div>
     </body>
 </html>
