--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </style>
     <body>
         
-        <h1><a href="https://sarahobaird.github.io/test/">Click Here to go to a website!!!</a></h1>
+        <h1><a href="https://sarahobaird.github.io/test/>Click Here to go to a website!!!</a></h1>
+	
+	<img href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fstickers%2Fguiadeniteroi-loop-up-L14hTCPrgdE2Ppvu2W&psig=AOvVaw3ZTgiOy_hjZ17-bK4a9Hvd&ust=1611545721710000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLDByIXSs-4CFQAAAAAdAAAAABAD">
      
     </body>
 </html>
