--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Bored Button Thing</title>
+        <title>Click it</title>
     </head>
     <style>
 		a{
